src/styles/rich-text.css
:root {
  --rich-text-y: 1em;
}

.rich-text > * {
  margin-top: var(--rich-text-y);
}

.rich-text.underlined > p {
  @apply border-bottom border-[#DDD] pb-yhalf mt-yhalf;
}

.rich-text.bold > p {
  @apply font-sansText font-bold leading-[1.1];
}

.rich-text > h1,
.rich-text > h2,
.rich-text > h3,
.rich-text > h4 {
  margin-top: var(--space-y-double);
}

.rich-text > h4 + p {
  margin-top: var(--space-y-half);
}

.rich-text > ul,
.rich-text > ol,
.rich-text > blockquote,
.rich-text > ul + *,
.rich-text.inventory > p,
.rich-text > ol + *,
.rich-text > blockquote + * {
  margin-top: calc(var(--rich-text-y) * 0.5);
}

.rich-text.inventory > ul {
  margin-top: var(--rich-text-y);
}

.rich-text > ul,
.rich-text > ol,
.rich-text > blockquote {
  clear: both;
}

.rich-text > div {
  margin-bottom: calc(var(--rich-text-y) * 1.333);
  margin-top: calc(var(--rich-text-y) * 1.333);
}

.rich-text > *:first-child {
  @apply mt-0;
}

.rich-text > div:last-child {
  @apply mb-0;
}

.rich-text blockquote,
.rich-text p {
  @apply mx-auto;
}

.rich-text h1 {
  @apply text-2xl font-bold uppercase tracking-header;
}

.rich-text.capital h1 {
  @apply capitalize;
}

.rich-text h2 {
  @apply text-h2;
}

.rich-text.capital h2 {
  @apply capitalize;
}

.rich-text.card h2 {
  @apply text-card;
}

.rich-text h3 {
  @apply text-h3;
}

.rich-text h4 {
  @apply text-h4;
}

.rich-text p,
.rich-text span,
.rich-text li {
  @apply text-md font-medium;
}

.rich-text p.small {
  @apply font-sansText text-xs font-bold;
}

.rich-text p.large {
  @apply font-sansText text-bodyLg font-bold;
}

.rich-text p strong {
  @apply font-sansText leading-[1.1];
}

.rich-text h1 .indented,
.rich-text h2 .indented,
.rich-text h3 .indented,
.rich-text h4 .indented,
.rich-text p .indented {
  @apply pl-x;
}

.rich-text ul,
.rich-text ol {
  @apply mx-auto my-ydouble;
}

.rich-text ul {
  @apply pl-x;
}

.rich-text li:has(> .indented) {
  @apply ml-xdouble;
}

.rich-text.inventory ul {
  column-count: 2;
  column-gap: 16px;
}

.rich-text li {
  @apply border;

  margin-top: calc(-1 * var(--border-size));
  padding-left: calc(1em + var(--space-x));
  padding-bottom: 16px;
}

.rich-text.inventory ul li {
  @apply font-normal text-xs tracking-tight;
  border: none;
  break-inside: avoid;
}

.rich-text li:last-of-type {
  padding-bottom: 0;
}

.rich-text.inventory ul li:last-of-type {
  padding-bottom: 16px;
}

.rich-text ul li {
  position: relative;
}

.rich-text ul li::before {
  content: '—';
  position: absolute;
  left: 0;
}

.rich-text li:first-child {
  margin-top: 0;
}

.rich-text.inventory ul li:before {
  content: '';
}

.rich-text h1 a,
.rich-text h2 a {
  @apply underline;
}

.rich-text p a,
.rich-text li a {
  text-decoration: underline;
  text-decoration-thickness: 2px;
  color: theme('colors.black');
}

.rich-text a:focus {
  box-shadow: none;
  outline: 0;
}

.rich-text a:focus-visible {
  text-decoration: underline;
  text-decoration-thickness: 2px;
}

@media (hover: hover) {
  .rich-text a:hover {
    font-weight: bold;
  }
}

